Add date range searches for incomes